--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,27 @@
 backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-catboost==1.2.7
+blinker @ file:///C:/b/abs_d9y2dm7cw2/croot/blinker_1696539752170/work
+click @ file:///D:/bld/click_1692312014553/work
 colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
 comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1710320294760/work
 contourpy==1.1.1
 cycler==0.12.1
 debugpy @ file:///C:/b/abs_c0y1fjipt2/croot/debugpy_1690906864587/work
 decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
+Flask @ file:///home/conda/feedstock_root/build_artifacts/flask_1712667726126/work
 fonttools==4.55.3
 graphviz==0.20.3
 importlib_metadata @ file:///home/conda/feedstock_root/build_artifacts/importlib-metadata_1726082825846/work
 importlib_resources==6.4.5
 ipykernel @ file:///D:/bld/ipykernel_1719845595208/work
 ipython @ file:///D:/bld/ipython_1651240746850/work
+itsdangerous @ file:///home/conda/feedstock_root/build_artifacts/itsdangerous_1713372668944/work
 jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1669134318875/work
+Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1715127149914/work
 joblib==1.4.2
 jupyter_client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1726610684920/work
 jupyter_core @ file:///D:/bld/jupyter_core_1710257325428/work
 kiwisolver==1.4.7
+MarkupSafe @ file:///C:/b/abs_ecfdqh67b_/croot/markupsafe_1704206030535/work
 matplotlib==3.7.5
 matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
 nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1705850609492/work
@@ -40,14 +45,14 @@ scikit-learn==1.3.2
 scipy==1.10.1
 seaborn==0.13.2
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
--e git+https://github.com/MohammedFaisal112/Student-Data-Analytics.git@2dae85e90ec2024f213fc06e283339f47583b4d2#egg=studatanalysis
+-e git+https://github.com/MohammedFaisal112/Student-Data-Analytics.git@42a6b6a22cf617771d96658fad70d7357a3de173#egg=studatanalysis
 tenacity==9.0.0
 threadpoolctl==3.5.0
 tornado @ file:///D:/bld/tornado_1666788847934/work
 traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
 tzdata==2024.2
 wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1729884156362/work
 xgboost==2.1.3
 zipp==3.20.2
-
 # -e .
